Create PhpUnit evaluator

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,10 @@
 include_directories(../lib/gram/src/gram/include)
 
 add_executable(gram-php
+        ../include/CommandLine.h
+        ../include/PhpUnitEvaluator.h
+        CommandLine.cpp
+        PhpUnitEvaluator.cpp
         main.cpp
         )
 
