--- a/example/composer.json
+++ b/example/composer.json
@@ -5,7 +5,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Examples\\": "src/"
+            "Example\\": "src/"
         }
     }
 }
