Tweak source files order

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,17 +2,19 @@ include_directories(../lib/gram/src/gram/include)
 include_directories(../lib/pugixml/src/pugixml/src)
 
 set(SOURCE_FILES
-        ../include/gram-php/CommandLine.h
-        ../include/gram-php/DiffCalculator.h
-        ../include/gram-php/PhpLiteral.h
-        ../include/gram-php/PhpType.h
-        ../include/gram-php/PhpUnitEvaluator.h
         CommandLine.cpp
         DiffCalculator.cpp
         PhpLiteral.cpp
         PhpType.cpp
         PhpUnitEvaluator.cpp
-        ../include/gram-php/PhpUnserializer.h PhpUnserializer.cpp)
+        PhpUnserializer.cpp
+        ../include/gram-php/CommandLine.h
+        ../include/gram-php/DiffCalculator.h
+        ../include/gram-php/PhpLiteral.h
+        ../include/gram-php/PhpType.h
+        ../include/gram-php/PhpUnitEvaluator.h
+        ../include/gram-php/PhpUnserializer.h
+        )
 
 add_library(gram-php STATIC ${SOURCE_FILES})
 
