--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -27,7 +27,7 @@ ExternalProject_Add(fakeit
 add_executable(gram-php-tests
         test.cpp
         diff_calculator_test.cpp
-        php_unserializer_test.cpp
+        php_serializer_test.cpp
         )
 
 add_dependencies(gram-php-tests catch fakeit)
